# ere-guests

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: cargo-fetch-all.sh  cargo-fmt-all.sh  check-duplicate-pkg.sh  check-fmt.sh  check-unused-patch.sh
.github/workflows/: compile-and-release.yml  integration-test.yml  release-please.yml  unit-test.yml
crates/block-encoding-length/: Cargo.toml
crates/block-encoding-length/src/: guest.rs  host.rs  lib.rs
crates/block-encoding-length/src/guest/: block_ssz.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs
crates/guest/: Cargo.toml
crates/guest/src/: guest.rs  lib.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/fixtures/: .gitignore
crates/integration-tests/src/: lib.rs  stateless_validator.rs
crates/integration-tests/tests/: block-encoding-length.rs  empty.rs  execution_payload.rs  new_payload_request.rs  panic.rs  stateless-validator-ethrex.rs  stateless-validator-reth.rs
crates/stateless-validator-common/: Cargo.toml
crates/stateless-validator-common/src/: execution_payload.rs  guest.rs  host.rs  lib.rs  new_payload_request.rs  rkyv_wrappers.rs  serde_wrappers.rs
crates/stateless-validator-debug/: Cargo.toml
crates/stateless-validator-debug/src/: fixtures.rs  lib.rs  main.rs
crates/stateless-validator-ethrex/: Cargo.toml
crates/stateless-validator-ethrex/src/: execution_payload.rs  guest.rs  host.rs  lib.rs  new_payload_request.rs  wire.rs
crates/stateless-validator-ethrex/src/guest/: zisk.rs  zkvm_interface.rs
crates/stateless-validator-ethrex/src/guest/zisk/: ffi.rs  impls.rs
crates/stateless-validator-reth/: Cargo.toml
crates/stateless-validator-reth/src/: execution_payload.rs  guest.rs  host.rs  lib.rs  new_payload_request.rs  serde_bincode_compat.rs
crates/stateless-validator-reth/src/guest/: openvm.rs  zisk.rs  zkvm_interface.rs
output/: debug-pass-structure.elf  explicit-default-o3-passes.elf  explicit-default-o3-passes.stderr  explicit-empty-passes.stderr  explicit-passargs.stderr  final-rustc-invocation.txt  passlist-from-debug-pass.txt  pipeline-probe.elf
