[workspace]
members = [
    # Guest utils
    "crates/guest",

    # Guest libs
    "crates/stateless-validator-debug",
    "crates/stateless-validator-common",
    "crates/stateless-validator-ethrex",
    "crates/stateless-validator-reth",

    # Integration tests
    "crates/integration-tests",

    # Utils
    "crates/downloader",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
version = "0.9.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(zisk_hints)',
    'cfg(zisk_hints_debug)',
    'cfg(target_vendor, values("zisk"))',
] }

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
result_large_err = "allow"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
bincode = { version = "2.0.1", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
once_cell = { version = "1.21", default-features = false }
rkyv = { version = "0.8.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_with = { version = "3", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
bytes = { version = "1.6.0", default-features = false }

# test/util
flate2 = "1.1.5"
rayon = "1.11.0"
reqwest = "0.12"
serde_json = "1.0"
tar = "0.4.44"
tempfile = "3.6.0"
tokio = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# alloy
alloy-consensus = { version = "2.0.0", default-features = false }
alloy-eips = { version = "2.0.0", default-features = false }
alloy-genesis = { version = "2.0.0", default-features = false, features = [
    "serde-bincode-compat",
] }
alloy-rpc-types-engine = { version = "2.0.0", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "map-foldhash",
    "map-indexmap",
] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-trie = { version = "0.9", default-features = false }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-primitives-traits = { version = "0.3.0", default-features = false }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
stateless = { git = "https://github.com/paradigmxyz/stateless", rev = "e5480e71a8031641ff471cad9dc482a7a14b32d5", default-features = false }
tries = { git = "https://github.com/paradigmxyz/stateless", rev = "e5480e71a8031641ff471cad9dc482a7a14b32d5", default-features = false }

# ethrex
ethrex-common = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }
ethrex-crypto = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }
ethrex-guest-program = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }
ethrex-rpc = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }
ethrex-vm = { git = "https://github.com/lambdaclass/ethrex.git", rev = "81484becd285e2a1e178306d8c22f94a104f560b", default-features = false }

# ssz
libssz = { version = "0.2.1", default-features = false, features = ["alloc"] }
libssz_derive = { package = "libssz-derive", version = "0.2.1" }
libssz_merkle = { package = "libssz-merkle", version = "0.2.1", default-features = false, features = [
    "alloc",
] }
libssz_types = { package = "libssz-types", version = "0.2.1", default-features = false, features = [
    "alloc",
] }

# ere
ere-codec = { git = "https://github.com/eth-act/ere", tag = "v0.8.0" }
ere-platform-core = { git = "https://github.com/eth-act/ere", tag = "v0.8.0" }
ere-prover-core = { git = "https://github.com/eth-act/ere", tag = "v0.8.0" }
ere-dockerized = { git = "https://github.com/eth-act/ere", tag = "v0.8.0" }

# local
guest = { path = "crates/guest", default-features = false }
stateless-validator-common = { path = "crates/stateless-validator-common", default-features = false }
stateless-validator-ethrex = { path = "crates/stateless-validator-ethrex", default-features = false }
stateless-validator-reth = { path = "crates/stateless-validator-reth", default-features = false }
