[package]
name = "block-encoding-length"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
bincode = { workspace = true, features = ["alloc", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# reth
reth-ethereum-primitives = { workspace = true, features = ["serde", "serde-bincode-compat"] }
reth-primitives-traits.workspace = true

# ssz
libssz.workspace = true
libssz_derive.workspace = true

# ere
ere-prover-core = { workspace = true, optional = true }

# local
guest.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
# guest
default = ["std"]
std = []

# host
host = ["std", "dep:anyhow", "dep:ere-prover-core"]
