[package]
name = "integration-tests"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

[dev-dependencies]
serde_json.workspace = true

# ere
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

# local
block-encoding-length = { workspace = true, features = ["std", "host"] }
stateless-validator-ethrex = { workspace = true, features = ["std", "host"] }
stateless-validator-reth = { workspace = true, features = ["std", "host"] }
