[package]
name = "integration-tests"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
flate2.workspace = true
rayon.workspace = true
sha2.workspace = true
serde = { workspace = true, features = ["derive"] }
tar.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tempfile.workspace = true
serde_json.workspace = true

# reth
stateless.workspace = true

# alloy
alloy-primitives.workspace = true

# ere
ere-dockerized.workspace = true
ere-io.workspace = true
ere-zkvm-interface.workspace = true

# local
guest.workspace = true
stateless-validator-common.workspace = true

[dev-dependencies]
reth-chainspec.workspace = true
stateless.workspace = true
reth-evm-ethereum.workspace = true

# ere
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

# local
block-encoding-length = { workspace = true, default-features = true, features = [
    "host",
] }
stateless-validator-common = { workspace = true, default-features = true, features = [
    "host",
] }
stateless-validator-ethrex = { workspace = true, default-features = true, features = [
    "host",
] }
stateless-validator-reth = { workspace = true, default-features = true, features = [
    "host",
] }
