[package]
name = "stateless-validator-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = [
    "derive",
    "alloc",
], default-features = false }
serde_with = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
anyhow.workspace = true

# lighthouse
tree_hash.workspace = true
tree_hash_derive.workspace = true
ssz_types.workspace = true
typenum.workspace = true

# ssz
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true

alloy-primitives.workspace = true
alloy-eips.workspace = true

[features]
# guest
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_with"]
rkyv = ["dep:rkyv"]

# host
host = ["std", "dep:sha2"]
