[package]
name = "stateless-validator-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rkyv = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true, features = ["macros"] }
serde = { workspace = true, optional = true, features = [
    "derive",
    "alloc",
], default-features = false }

# ssz
libssz.workspace = true
libssz_derive.workspace = true
libssz_merkle.workspace = true
libssz_types.workspace = true

#alloy
alloy-primitives = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }

# crypto
sha2.workspace = true

# ere
ere-platform-core.workspace = true
ere-codec.workspace = true

[features]
# guest
default = ["std"]
std = ["serde"]
serde = ["dep:serde", "dep:serde_with"]
rkyv = ["dep:rkyv"]

# host
host = ["std", "dep:alloy-primitives", "dep:alloy-eips"]
