[package]
name = "stateless-validator-debug"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# reth
stateless.workspace = true

# local
guest.workspace = true
stateless-validator-ethrex = { workspace = true, default-features = true, features = [
    "host",
] }
stateless-validator-reth = { workspace = true, default-features = true, features = [
    "host",
] }
