[package]
name = "stateless-validator-ethrex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
rkyv.workspace = true

# alloy
alloy-consensus = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-genesis = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }

# reth
reth-stateless = { workspace = true, optional = true }

# ethrex
ethrex-common.workspace = true
ethrex-guest-program.workspace = true
ethrex-rlp = { workspace = true, optional = true }
ethrex-rpc = { workspace = true, optional = true }
ethrex-vm.workspace = true

# ere
ere-io = { workspace = true, features = ["rkyv"] }
ere-zkvm-interface = { workspace = true, optional = true }

# local
guest.workspace = true

[features]
# guest
default = ["std"]
std = []
l2 = ["ethrex-guest-program/l2"]
risc0 = ["ethrex-vm/risc0"]
sp1 = ["ethrex-vm/sp1"]
zisk = ["ethrex-vm/zisk"]

# host
host = [
    "std",
    "dep:anyhow",
    "dep:alloy-consensus",
    "dep:alloy-eips",
    "dep:alloy-rlp",
    "dep:alloy-genesis",
    "dep:reth-stateless",
    "dep:ethrex-rlp",
    "dep:ethrex-rpc",
    "dep:ere-zkvm-interface",
]
