[package]
name = "stateless-validator-ethrex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rkyv.workspace = true
bytes.workspace = true

# alloy
alloy-consensus = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-genesis = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }

# ethrex
ethrex-common.workspace = true
ethrex-crypto.workspace = true
ethrex-guest-program.workspace = true
ethrex-rlp.workspace = true
ethrex-rpc = { workspace = true, optional = true }
ethrex-vm.workspace = true

# ssz
libssz_merkle.workspace = true

# reth
stateless = { workspace = true, optional = true }

# ere
ere-io = { workspace = true, features = ["rkyv"] }
ere-zkvm-interface = { workspace = true, optional = true }

# local
guest.workspace = true
stateless-validator-common = { workspace = true, features = ["rkyv"] }
stateless-validator-reth = { workspace = true, default-features = true, optional = true, features = [
    "host",
] }


[features]
# guest
default = ["std"]
std = ["stateless-validator-common/std"]
# NOTE: Need additional `ethrex-crypto/risc0` to make `KZG_PRECOMPUTE = 0`
risc0 = ["ethrex-guest-program/risc0", "ethrex-guest-program/c-kzg", "ethrex-crypto/risc0"]
sp1 = ["ethrex-guest-program/sp1", "ethrex-guest-program/secp256k1"]
zisk = ["ethrex-guest-program/zisk"]

# host
host = [
    "std",
    "ethrex-crypto/secp256k1",
    "stateless-validator-common/host",
    "dep:alloy-consensus",
    "dep:alloy-eips",
    "dep:alloy-rlp",
    "dep:alloy-genesis",
    "dep:ere-zkvm-interface",
    "dep:ethrex-rpc",
    "dep:stateless",
    "dep:stateless-validator-reth",
]
