[package]
name = "stateless-validator-reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
once_cell.workspace = true
serde.workspace = true

# reth
reth-chainspec.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives-traits.workspace = true
reth-stateless.workspace = true

# mpt
sparsestate.workspace = true

# ere
ere-io = { workspace = true, features = ["bincode"] }
ere-zkvm-interface = { workspace = true, optional = true }

# local
guest.workspace = true
stateless-validator-common = { workspace = true, features = ["serde"] }

[features]
# guest
default = ["std", "k256"]
std = ["once_cell/std", "stateless-validator-common/std"]
k256 = ["reth-stateless/k256"]
secp256k1 = ["reth-stateless/secp256k1"]

# host
host = ["std", "stateless-validator-common/host", "dep:anyhow", "dep:ere-zkvm-interface"]
