[package]
name = "stateless-validator-reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell.workspace = true
serde.workspace = true
serde_with.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine = { workspace = true, default-features = false, features = [
    "serde",
] }

# revm
revm.workspace = true

# reth
reth-chainspec.workspace = true
reth-payload-validator = { workspace = true, default-features = false }
reth-ethereum-primitives.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives-traits.workspace = true
stateless.workspace = true

# mpt
tries.workspace = true

# zkvm-standard
zkvm-interface = { workspace = true, optional = true }

# ere
bincode = { workspace = true, features = ["alloc", "serde"] }
ere-prover-core = { workspace = true, optional = true }

# crypto
sha2.workspace = true

# local
guest.workspace = true
stateless-validator-common = { workspace = true, features = ["serde"] }

[features]
# guest
default = ["std"]
std = ["once_cell/std", "stateless-validator-common/std"]
openvm = []
zisk = ["zkvm-interface"]
zkvm-interface = ["alloy-consensus/crypto-backend", "dep:zkvm-interface"]

# host
host = ["std", "stateless-validator-common/host", "dep:ere-prover-core"]
